@@ -20,15 +20,17 @@ import static com.google.common.truth.Truth.assertThat;
 
 import android.content.ComponentName;
 
+import androidx.test.ext.junit.runners.AndroidJUnit4;
 import androidx.wear.protolayout.proto.ActionProto;
+
+import com.google.common.collect.ImmutableMap;
 
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.robolectric.RobolectricTestRunner;
 
 import java.util.Map;
 
-@RunWith(RobolectricTestRunner.class)
+@RunWith(AndroidJUnit4.class)
 public class ActionBuildersTest {
     private static final ComponentName LAUNCH_COMPONENT =
             new ComponentName("com.package", "launchClass");
@@ -55,7 +57,8 @@ public class ActionBuildersTest {
 
         ActionBuilders.LaunchAction launchAction =
                 ActionBuilders.launchAction(
-                        LAUNCH_COMPONENT, Map.of(keyInt, intExtra, keyString, stringExtra));
+                        LAUNCH_COMPONENT,
+                        ImmutableMap.of(keyInt, intExtra, keyString, stringExtra));
 
         ActionProto.LaunchAction launchActionProto = launchAction.toActionProto().getLaunchAction();
         assertThat(launchActionProto.getAndroidActivity().getPackageName())
